--- a/client/src/styles/addCard/displayCardsContainer.css
+++ b/client/src/styles/addCard/displayCardsContainer.css
@@ -8,7 +8,8 @@
     overflow: auto;
     color: rgb(255, 255, 255);
     background-color: rgba(93, 93, 93, 0.363);
-    background-color: var(--accent-color-1-full-trans);
+    /* background-color: var(--accent-color-1-full-trans); */
+    background-color: var(--addCard-theme);
     box-shadow: var(--box-shadow);
     border-radius: 6px;
     scrollbar-width: none;
