--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -36,7 +36,7 @@
 
 @media screen and (max-width: 700px) {
     .header {
-
+        margin-left: 7vw;
         height: 60px;
         margin-bottom: 0px;
     }
