--- a/client/src/styles/popups/colorPicker.css
+++ b/client/src/styles/popups/colorPicker.css
@@ -5,6 +5,10 @@
     margin: 20px 0 0 0;
 }
 
+.color-picker-container .fa-icon {
+    color: rgb(107, 107, 107);
+}
+
 .color-picker-container button {
     background-color: rgba(240, 248, 255, 0);
     box-shadow: var(--box-shadow);
