--- a/client/src/styles/addCard/displayCardsContainer.css
+++ b/client/src/styles/addCard/displayCardsContainer.css
@@ -6,7 +6,7 @@
     /*     background-color: rgb(138, 138, 138);
     background-color: var(--background-2); */
     overflow: auto;
-    color: rgb(255, 255, 255);
+    color: var(--accent-color-1);
     background-color: rgba(93, 93, 93, 0.363);
     /* background-color: var(--accent-color-1-full-trans); */
     background-color: var(--addCard-theme);
@@ -31,7 +31,7 @@
 }
 
 .card-list-item {
-    border-bottom: 1px solid rgb(192, 203, 205);
+    border-bottom: 1px solid var(--accent-color-1);
     border-bottom-width: 80%;
     /* border-bottom: 1px solid var(--accent-color-3); */
     padding: 30px 10px;
