testing mobile IOS

--- a/client/src/styles/home/deckList.css
+++ b/client/src/styles/home/deckList.css
@@ -154,3 +154,13 @@ li .cards-remaining {
     }
 
 }
+
+@media only screen and (max-height: 500px) {
+    .decks-container {
+        width: 88vw;
+        height: 55vh;
+    }
+
+
+
+}
