--- a/client/src/styles/gptBot/gptBot.css
+++ b/client/src/styles/gptBot/gptBot.css
@@ -8,7 +8,7 @@
 
 .gpt-bot-sub-container {
     box-sizing: border-box;
-    padding: 10px;
+    padding: 10px 2% 30px 2%;
     position: absolute;
     bottom: 50px;
     width: 65%;
@@ -24,24 +24,35 @@
     flex-direction: column;
     gap: 30px;
     color: var(--accent-color-1);
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer and Edge */
 }
 
-.gpt-bot-sub-container form {
-    width: 100%;
-    height: 20px;
+.gpt-bot-sub-container::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
 
+
+.gpt-bot-sub-container form {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
 }
 
 
 .gpt-bot-sub-container input {
+
     margin-right: 25px;
-    margin-left: 18px;
-    width: 86.5%;
+    width: 100%;
     /* background-color: var(--addCard-theme); */
     background-color: rgba(0, 0, 0, 0);
     height: 30px;
     border: none;
-    outline: .5px solid rgba(234, 234, 234, 0.184);
+    outline: 2px solid rgba(234, 234, 234, 0.539);
+    z-index: 50;
 }
 
 .gpt-bot-sub-container input::placeholder {
@@ -63,6 +74,7 @@
 .send-gpt-prompt-button {
     color: var(--accent-color-1);
 }
+
 
 @media screen and (max-width: 1000px) {
 
