updates to popups in deck

--- a/client/src/styles/popups/deckMorePopup.css
+++ b/client/src/styles/popups/deckMorePopup.css
@@ -1,5 +1,6 @@
 .more-popup {
-    position: fixed;
+    position: absolute;
+    right: 100px;
     display: block;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 5001;
