--- a/client/src/styles/addCard/displayCardsContainer.css
+++ b/client/src/styles/addCard/displayCardsContainer.css
@@ -31,11 +31,21 @@
 }
 
 .card-list-item {
+    position: relative;
     border-bottom: 1px solid var(--accent-color-1);
     border-bottom-width: 80%;
     /* border-bottom: 1px solid var(--accent-color-3); */
     padding: 30px 10px;
     margin: 0 10px;
+
+    display: flex;
+    justify-content: space-between;
+    gap: 5%;
+}
+
+.card-front-and-back {
+    flex-basis: 80%;
+
 }
 
 .display-card-front {
@@ -47,6 +57,42 @@
     font-size: .7em;
 }
 
+.edit-delete-buttons {
+    position: absolute;
+    right: 10px;
+    bottom: 20px;
+    display: flex;
+    justify-content: flex-end;
+    flex-basis: 20%;
+    gap: 10%;
+    max-height: 35px;
+
+}
+
+.edit-delete-buttons .fa-icon {
+    font-size: .7em;
+    margin: 0;
+
+
+}
+
+#fa-icon button {
+    color: aqua;
+}
+
+.card-list-item .edit-delete-buttons button {
+    color: black;
+    background-color: rgba(158, 160, 148, 0);
+    width: auto;
+    margin: 0;
+    height: 1.5em;
+    padding: 0 8px;
+}
+
+.edit-delete-buttons button:hover {
+    background-color: var(--accent-color-1);
+    color: aliceblue;
+}
 
 @media screen and (max-width: 700px) {
     .display-cards-container {
