buttons in place for gpt Q and R

--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -22,7 +22,7 @@ footer.footer {
  */
 footer button {
     min-width: 100px;
-    background-color: var(--addCard-theme);
+    /* background-color: var(--addCard-theme); */
     color: var(--accent-color-1);
 }
 
