--- a/client/src/styles/gptBot/gptBot.css
+++ b/client/src/styles/gptBot/gptBot.css
@@ -1,18 +1,45 @@
 .gpt-bot-container {
-    width: 40vw;
+    margin-top: 50px;
+    width: 70vw;
+
     display: flex;
+    flex-direction: row;
     justify-content: center;
     /* align-items: center; */
-    max-height: 100vh;
+    max-height: auto;
+}
+
+.gpt-bot-container, .text-controls-box {
+    height: 150px;
+}
+
+.gpt-bot-container * {
+    box-sizing: border-box;
+}
+
+.text-controls-box {
+    margin-right: 5px;
+    padding-top: 10px;
+    padding-bottom: 40px;
+    flex-basis: 5%;
+    color: var(--heading-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.text-controls-box button {
+    width: 40px;
 }
 
 .gpt-bot-sub-container {
+    flex-basis: 95%;
     box-sizing: border-box;
     padding: 10px 2% 30px 2%;
-    position: absolute;
-    bottom: 50px;
+    /*     position: absolute;
+    bottom: 50px; */
     width: 65%;
-    height: 20%;
+    min-height: 20%;
     overflow-y: auto;
     background-color: var(--addCard-theme);
     /* background-color: var(--accent-color-1-full-trans); */
@@ -77,6 +104,12 @@
 
 
 @media screen and (max-width: 1000px) {
+
+    .gpt-bot-sub-container {
+        padding-left: 5px;
+        width: 80%;
+        min-height: 20%;
+    }
 
     .gpt-bot-sub-container input {
         padding-left: 5px;
