--- a/client/src/styles/login/loginPage.css
+++ b/client/src/styles/login/loginPage.css
@@ -62,7 +62,7 @@
 .auth-window-container li {
     display: flex;
     justify-content: space-between;
-    align-content: start;
+    align-content: flex-start;
     gap: 20px;
 }
 
