--- a/client/src/styles/home/decksColHeadings.css
+++ b/client/src/styles/home/decksColHeadings.css
@@ -1,6 +1,6 @@
 .row-1 {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: space-between;
     height: 7vh;
     width: 50vw;
